# Personalized_Learning_Project

./: .env.example  .gitignore  API_INTEGRATION.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  QUICK_START.md  TECHNICAL_DOCUMENTATION.md  USER_MANUAL.md  app.py  generate_data.py  pyproject.toml  readme.md  requirements.txt  system_prompt.md  test_api.py
