[project]
name = "grokpersonalizedlearningmvp"
version = "0.2.0"
description = "Physics Learning App with OpenAI Realtime API and FAISS Vector Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "minio>=7.2.0",
    "websockets>=12.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "streamlit-webrtc>=0.47.0",
    "av>=10.0.0",
]
